<resources>
    <string name="app_name">MET Values</string>
    <string name="basic">Basic</string>
    <string name="tdee_button">TDEE</string>
    <string name="met">MET</string>
    <string name="custom">Custom</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="tdee">Daily TDEE:</string>
    <string name="calories">Calories</string>
    <string name="average">Avg. Hourly:</string>
    <string name="bmr">Daily BMR:</string>
    <string name="calculate">Calculate!</string>
    <string name="two_part">%1$s  %2$s</string>
    <string name="add">Add to Custom Calculator</string>
    <string name="about">About</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="activity">Activity Level:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="act_0">Fully Sedentary</string>
    <string name="act_1">Mostly Inactive</string>
    <string name="act_2">Slightly Active</string>
    <string name="act_3">Moderately Active</string>
    <string name="act_4">Very Active</string>
    <string name="act_5">Extremely Active</string>
    <string name="categories">Categories:</string>
    <string name="values">MET Values:</string>
    <string name="minutes_spent">Minutes Spent:</string>
    <string name="hours_spent">Hours Spent:</string>
    <string name="met_score">MET Score:</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="categoryHead">Activity</string>
    <string name="metHead">MET Score</string>
    <string name="hoursHead">Hours Spent</string>
    <string name="caloriesHead">Calories Burned</string>
    <string-array name="bicycling">
        <item>Mountain biking - general </item>
        <item>Mountain biking- uphill and vigorous </item>
        <item>Mountain biking - competitive and racing </item>
        <item>BMX biking</item>
        <item>Under 10 mph biking - leisure </item>

        <item>General biking</item>
        <item>Biking - 5.5 mph </item>
        <item>Biking - 9.4 mph  </item>
        <item>Biking - 10 to 11.9 mph  </item>
        <item>Biking -  12 to 13.9 mph  </item>

        <item>Biking - 14 to 15.9 mph  </item>
        <item>Biking - 16 to 19 mph  </item>
        <item>Biking - over 20 mph  </item>
        <item>unicycling </item>
    </string-array>
    <string-array name="conditioning">
        <item>Active video game (e.g. Wii Fit) - light effort (e.g. yoga, stretching) </item>
        <item>Active video game (e.g. Wii Fit) - moderate effort (e.g. aerobic) </item>
        <item>Active video game (e.g. Wii Fit) - vigorous effort (e.g. dancing)</item>

        <item>Calisthenics (e.g. sit-ups, crunches) - light effort </item>
        <item>Calisthenics (e.g. push-ups, pull-ups) - moderate effort </item>
        <item>Calisthenics (e.g. push-ups, pull-ups) - vigorous effort </item>

        <item>Circuit training - moderate effort </item>
        <item>Circuit training - vigorous effort </item>

        <item>Eliptical training - moderate effort </item>

        <item>Obstacle courses and/or boot camp </item>

        <item>Resistance training - multiple exercises, 8 to 15 repetitions </item>
        <item>Resistance training - squats at slow or explosive effort </item>
        <item>Resistance training - power lifting or body building at rigorous effort </item>

        <item>Stationary bicycle - 30 to 50 watts - light effort </item>
        <item>Stationary bicycle - 51 to 89 watts - light to moderate effort </item>
        <item>Stationary bicycle - 90 to 100 watts - moderate to vigorous effort </item>
        <item>Stationary bicycle - 101 to 160 watts - vigorous effort </item>
        <item>Stationary bicycle - 161 to 220 watts - vigorous effort </item>
        <item>Stationary bicycle - 201 to 270 watts - vigorous effort </item>
        <item>Stationary bicycle - spin class </item>

        <item>Rope skipping - general </item>

        <item>Rowing - 100 watts</item>
        <item>Rowing - 150 watts</item>
        <item>Rowing - 220 watts</item>

        <item>Ski machine - general </item>

        <item>Stretching - mild </item>

        <item>Pilates - general </item>

        <item>Water aerobics or calisthenics </item>

        <item>Video workouts - low effort (e.g. yoga, stretching) </item>
        <item>Video workouts - moderate effort (e.g. cardio, resistance) </item>
        <item>Video workouts - vigorous effort (e.g. cardio, resistance) </item>

        <item>Yoga - Hatha </item>
        <item>Yoga - Power </item>
        <item>Yoga - Nadisodhana</item>
        <item>Yoga - Surya Namaskar</item>
    </string-array>
    <string-array name="dancing">
        <item>Ballet, Modern, or Jazz - rehearsal or class </item>
        <item>Ballet, Modern, or Jazz - performance or vigorous effort </item>

        <item>Tap</item>

        <item>Aerobic - low impact </item>
        <item>Aerobic - high impact </item>

        <item>Bench step class - general </item>

        <item>Ballroom - slow </item>
        <item>Ballroom - fast </item>
        <item>Ballroom - competitive </item>
    </string-array>
    <string-array name="fishing">
        <item>Fishing - general</item>
        <item>Hunting - general  </item>
        <item>Rifle exercises </item>
    </string-array>
    <string-array name="home">
        <item>Animal care - general </item>

        <item>Automobile work - general </item>

        <item>Carpentry - general</item>
        <item>Carpentry - home remodeling tasks at light effort </item>
        <item>Carpentry - home remodeling tasks at moderate effort </item>

        <item>Child care - general at light effort </item>
        <item>Child care - general at moderate effort </item>

        <item>Cleaning - sweeping at light effort </item>
        <item>Cleaning - sweeping at moderate effort </item>
        <item>Cleaning - mopping at light effort</item>
        <item>Cleaning - mopping at moderate effort </item>
        <item>Cleaning - general tasks at light effort </item>
        <item>Cleaning - general tasks at moderate effort </item>
        <item>Cleaning - general tasks at vigorous effort </item>
        <item>Cleaning - dusting </item>

        <item>Cleaning gutters </item>

        <item>Hammering nails </item>

        <item>Home repair - light effort </item>
        <item>Home repair - moderate effort </item>
        <item>Home repair - vigorous effort </item>

        <item>Ironing</item>

        <item>Kitchen activity - (e.g. cooking, cleaning) at light effort</item>
        <item>Kitchen activity - (e.g. cooking, cleaning) at moderate effort </item>

        <item>Knitting or sewing - light effort </item>

        <item>Laundry - folding, packing, hanging at light effort </item>
        <item>Laundry - folding, washing by hand at moderate effort </item>

        <item>Making beds and changing linens </item>

        <item>Moving furniture or carrying boxes</item>

        <item>Painting - general </item>
        <item>Plumbing - general </item>

        <item>Roofing - general </item>

        <item>Sanding floors with power sander </item>

        <item>Scrubbing floors - light effort </item>
        <item>Scrubbing floors - moderate effort  </item>
        <item>Scrubbing floors - vigorous effort  </item>

        <item>Sewing - machine </item>

        <item>Sharpening tools </item>

        <item>Walking or running while playing with children - light effort </item>
        <item>Walking or running while playing with children - moderate effort </item>
        <item>Walking or running while playing with children - vigorous effort</item>
        <item>Walking or running while playing with animals - light effort </item>
        <item>Walking or running while playing with animals - moderate effort </item>
        <item>Walking or running while playing with animals - vigorous effort</item>

        <item>Washing car </item>

        <item>Watering plants </item>
    </string-array>
    <string-array name="garden">
        <item>Carrying or loading lumber - moderate effort </item>
        <item>Carrying or loading lumber - vigorous effort </item>

        <item>Chopping wood - moderate effort </item>
        <item>Chopping wood - vigorous effort </item>

        <item>Garden work - digging, spading, composting at light effort </item>
        <item>Garden work - digging, spading, composting at moderate effort </item>
        <item>Garden work - digging, spading, composting at vigorous effort </item>
        <item>Garden work - planting at light effort</item>
        <item>Garden work - planting at moderate effort</item>

        <item>Mowing lawn - hand mower </item>
        <item>Mowing lawn - power mower </item>
        <item>Mowing lawn - riding mower </item>

        <item>Picking fruit - moderate effort</item>
        <item>Picking fruit - vigorous effort</item>

        <item>Shoveling snow - by hand with moderate effort </item>
        <item>Shoveling snow - by hand with vigorous effort</item>
        <item>Shoveling dirt - general </item>

        <item>Trimming shrubs or trees - manual cutter </item>
        <item>Trimming shrubs or trees - power cutter </item>

        <item>Yard work - general at light effort </item>
        <item>Yard work - general at moderate effort </item>
        <item>Yard work - general at vigorous effort</item>
    </string-array>
    <string-array name="misc">
        <item>Arts and crafts - sitting at light effort </item>
        <item>Arts and crafts - sitting at moderate effort </item>
        <item>Arts and crafts - standing at light effort </item>
        <item>Arts and crafts - standing at moderate effort </item>
        <item>Arts and crafts - standing at vigorous effort </item>

        <item>Board games - sitting </item>

        <item>Camping - general </item>

        <item>Casino gambling - standing </item>

        <item>Drawing, writing, painting - sitting </item>
        <item>Drawing, writing, painting - standing </item>

        <item>Reading, texting, talking - sitting </item>
        <item>Reading, texting, talking - standing </item>

    </string-array>
    <string-array name="music">
        <item>Accordion - sitting </item>

        <item>Cello - sitting </item>

        <item>Conducting orchestra - standing </item>

        <item>Double bass - standing </item>

        <item>Drums - sitting </item>

        <item>Flute - sitting </item>

        <item>Guitar - sitting </item>
        <item>Guitar - standing</item>

        <item>Horn - standing </item>

        <item>Marching band - moderate pace</item>
        <item>Marching band - brisk pace </item>

        <item>Organ - sitting</item>

        <item>Piano - sitting </item>

        <item>Trombone - standing </item>

        <item>Trumpet - standing </item>

        <item>Violin - sitting </item>

        <item>Woodwind - sitting </item>
    </string-array>
    <string name="occupational">Occupational</string>
</resources>