<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/met_weight"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/met_weight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp">
    </TextView>

    <TextView
        android:id="@+id/hours_spent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_spent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/categories"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="4dp">
    </TextView>

    <TextView
        android:id="@+id/met_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/met_score"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/hours_spent_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp">
    </TextView>

    <Spinner
        android:id="@+id/met_spinnerOne"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="150dp">
    </Spinner>

    <Spinner
        android:id="@+id/met_spinnerTwo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/met_spinnerOne"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="150dp">
    </Spinner>

    <Spinner
        android:id="@+id/met_spinnerThree"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/met_spinnerTwo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="150dp">
    </Spinner>

    <Spinner
        android:id="@+id/hours_spent"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/categories"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="150dp">
    </Spinner>

    <TextView
        android:id="@+id/met_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hours_spent_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="150dp">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>